# cord

./: .gitignore  .travis.yml  CARGO_README.md  Cargo.toml  Dockerfile-broker  Dockerfile-cli  README.md  rustfmt.toml
.github/workflows/: ci.yml
broker/: Cargo.toml  README.md
broker/src/: errors.rs  main.rs
broker/tests/: reciprocal.rs
client/: Cargo.toml
client/src/: errors.rs  lib.rs
cord-broker/: Cargo.toml  README.md
cord-broker/src/: main.rs
cord-broker/tests/: reciprocal.rs
cord-client/: Cargo.toml  README.md
cord-client/src/: lib.rs
cord-message/: Cargo.toml  README.md
cord-message/src/: lib.rs  message.rs
cord-pattern/: Cargo.toml  README.md
cord-pubsub/: Cargo.toml  README.md
cord-pubsub/src/: errors.rs  publisher.rs  subscriber.rs
generators/: Cargo.toml  README.md
generators/src/: lib.rs  simple.rs
generators/src/stream/: delay.rs  interruptable.rs  mod.rs  take_for.rs
message/: Cargo.toml  README.md
message/src/: codec.rs  message.rs
pattern-matcher/: Cargo.toml  README.md
pattern-matcher/src/: lib.rs
pubsub/: Cargo.toml  README.md
pubsub/src/: errors.rs  lib.rs  publisher.rs  subscriber.rs
server/: Cargo.toml  README.md
server/src/: errors.rs  main.rs  message.rs  pubsub.rs
server/tests/: load.rs  reciprocal.rs
server/tests/executors/: mod.rs  simple.rs
server/tests/executors/stream/: take_for.rs
server/tests/utils/: mod.rs
src/: main.rs
