[package]
name = "cord-client"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MPL-2.0"
description = "Provides user interfaces for the Cord platform"
repository = "https://github.com/petehayes102/cord"
keywords = ["cord", "stream", "streaming"]
categories = ["network-programming", "data-structures"]
edition = "2018"

[dependencies]
clap = "2.33"
cord-message = { version = "0.1", path = "../cord-message" }
cord-pattern = { version = "0.1", path = "../cord-pattern" }
env_logger = "0.6"
error-chain = "0.12"
futures = "0.1"
futures-locks = "0.3"
log = "0.4"
retain_mut = "0.1"
termcolor = "1.1"
tokio = "0.1"
