[package]
name = "cord-message"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MPL-2.0"
description = "Provides the core Message enumerator and codec for sending Messages between brokers and clients"
repository = "https://github.com/cord-proj/cord"
keywords = ["cord", "stream", "streaming"]
categories = ["network-programming", "data-structures"]
edition = "2018"

[dependencies]
bytes = "0.4"
cord-pattern = { version = "0.1", path = "../cord-pattern" }
error-chain = "0.12"
tokio-codec = "0.1"
