[package]
name = "cord-pubsub"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
edition = "2018"

[dependencies]
cord-message = { version = "0.1", path = "../cord-message" }
cord-pattern = { version = "0.1", path = "../cord-pattern" }
error-chain = "0.12"
futures = "0.1"
futures-locks = "0.3"
log = "0.4"
tokio = "0.1"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.3"
