[package]
name = "generators"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
edition = "2018"

[dependencies]
client = { path = "../client" }
futures = { version="0.3", features=["compat"] }
log = "0.4"
message = { path = "../message" }
pattern-matcher = { path = "../pattern-matcher" }
pin-utils = "0.1.0-alpha.4"
rand = "0.7"
tokio = { version="0.2", features=["time", "rt-threaded"] }
