[package]
name = "server"
version = "0.1.0"
authors = ["Pete Hayes <pete@hayes.id.au>"]
edition = "2018"

[dependencies]
clap = "2.33"
env_logger = "0.7"
error-chain = "0.12"
futures = { version="0.3", features=["compat"] }
log = "0.4"
message = { version = "0.1", path = "../message" }
pattern-matcher = { version = "0.1", path = "../pattern-matcher" }
pubsub = { version = "0.1", path = "../pubsub" }
tokio = { version="0.2", features=["macros", "rt-threaded", "sync", "time"] }

[dev-dependencies]
client = { path = "../client" }
generators = { path = "../generators" }
